--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "get-image-colors": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
     "multer": "^1.4.4"
