--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "get-image-colors": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
-    "multer": "^1.4.4"
+    "mongoose-unique-validator": "^3.1.0",
+    "multer": "^1.4.4",
+    "razorpay": "^2.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
