--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "get-image-colors": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.6",
+    "moment": "^2.29.3",
+    "mongoose": "^6.3.8",
     "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.4",
     "razorpay": "^2.8.1"
