--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-graphql": "^0.12.0",
     "get-image-colors": "^4.0.1",
+    "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "mongoose": "^6.3.8",
